<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Server Status</string>
    <string name="two">2</string>
    <string name="ten">10</string>
    <string name="five_thousand">5000</string>
    <string name="button_ok">OK</string>
    <string name="button_cancel">Cancel</string>
    <string name="server_remove_confirm">Remove %1$s?</string>
    <string name="action_add_server">Add server</string>
    <string name="action_server_add_checker">Add checker</string>
    <string name="action_server_update_now">Update now</string>
    <string name="action_server_change_host">Change host</string>
    <string name="action_server_remove">Remove</string>
    <string name="action_server_checker_update_now">Update now</string>
    <string name="action_server_checker_edit">Edit</string>
    <string name="action_server_checker_remove">Remove</string>
    <string name="action_settings">Settings</string>
    <string name="checker_http">Http</string>
    <string name="checker_https">Https</string>
    <string name="checker_ping">Ping</string>
    <string name="checker_socket">Socket</string>
    <string name="pref_enabled">Enabled</string>
    <string name="pref_enabled_summ">Run status updates on a schedule</string>
    <string name="pref_sound">Notification sound</string>
    <string name="pref_interval">Interval</string>
    <string name="pref_interval_summ">%1$s minutes between updates</string>
    <string name="pref_timeout">Timeout</string>
    <string name="pref_timeout_summ">Connections timeout after %1$s milliseconds</string>
    <string name="pref_retries">Retries</string>
    <string name="pref_retries_summ">Performs each check up to %1$s extra times</string>
    <string name="never">Never</string>
    <string name="empty_server_list">No servers added =(</string>
    <string name="empty_server_hint">No checkers, long-click on the server and select "Add checker".</string>
    <string name="empty_host">&lt;Blank&gt;</string>
    <string name="server_remove_fail">Failed to remove server</string>
    <string name="server_save_fail">Failed to save server</string>
    <string name="server_host_change">Change host</string>
    <string name="notification_title_fail">%1$s</string>
    <string name="notification_text_fail">%1$s/%2$s checks passed</string>
    <string name="hint_host_change">Hostname or IP</string>
    <string name="port">Port</string>
    <string name="response_code">Response code</string>
    <string name="all_certificates">Accept all certificates</string>
    <string name="checker_edit_title">Edit %1$s</string>
    <string name="checker_no_settings">%1$s has no settings</string>

    <string-array name="checkers_array">
        <item>@string/checker_http</item>
        <item>@string/checker_https</item>
        <item>@string/checker_ping</item>
        <item>@string/checker_socket</item>
    </string-array>

</resources>