<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <CheckBoxPreference
        android:defaultValue="true"
        android:key="pref_enabled"
        android:summary="@string/pref_enabled_summ"
        android:title="@string/pref_enabled" />
    <CheckBoxPreference
        android:defaultValue="true"
        android:key="pref_sound"
        android:title="@string/pref_sound" />

    <EditTextPreference
        android:defaultValue="@string/ten"
        android:inputType="number"
        android:key="pref_interval"
        android:summary="@string/pref_interval_summ"
        android:title="@string/pref_interval" />
    <EditTextPreference
        android:defaultValue="@string/five_thousand"
        android:inputType="number"
        android:key="pref_timeout"
        android:summary="@string/pref_timeout_summ"
        android:title="@string/pref_timeout" />
    <EditTextPreference
        android:defaultValue="@string/two"
        android:inputType="number"
        android:key="pref_retries"
        android:summary="@string/pref_retries_summ"
        android:title="@string/pref_retries" />

</PreferenceScreen>